doc/docs/2.1.x/reference/index.md
# Overview

This section includes references to various tools
that enable you to interact with Pachyderm by using
your favorite programming language.

<div class="row">
  <div class="column-2">
    <div class="card-square mdl-card mdl-shadow--2dp">
      <div class="mdl-card__title mdl-card--expand">
        <h4 class="mdl-card__title-text"> Community Edition Limits &nbsp;&nbsp;&nbsp;<i class="fa fa-file-text-o"></i></h4>
      </div>
      <div class="mdl-card__supporting-text">
        Learn about the scaling limitations and parallelism thresholds for the community edition of Pachyderm. 
      </div>
      <div class="mdl-card__actions mdl-card--border">
        <ul>
          <li><a href="scaling-limits" class="md-typeset md-link">
          Community Edition Limits
          </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div class="column-2">
    <div class="card-square mdl-card mdl-shadow--2dp">
      <div class="mdl-card__title mdl-card--expand">
        <h4 class="mdl-card__title-text"> Supported Releases &nbsp;&nbsp;&nbsp;<i class="fa fa-file-text-o"></i></h4>
      </div>
      <div class="mdl-card__supporting-text">
        Check our list of supported Pachyderm release versions.
      </div>
      <div class="mdl-card__actions mdl-card--border">
        <ul>
          <li><a href="supported-releases" class="md-typeset md-link">
          Supported Releases
          </a>
          </li>
        </ul>
       </div>
     </div>
  </div>
</div>
<div class="row">
  <div class="column-2">
    <div class="card-square mdl-card mdl-shadow--2dp">
      <div class="mdl-card__title mdl-card--expand">
        <h4 class="mdl-card__title-text"> Pipeline Spec&nbsp;&nbsp;&nbsp;<i class="fa fa-file-text-o"></i></h4>
      </div>
      <div class="mdl-card__supporting-text">
        Read about all the options that you can
        define in the pipeline Spec
        and view the examples of use.
      </div>
      <div class="mdl-card__actions mdl-card--border">
        <ul>
          <li><a href="pipeline-spec/" class="md-typeset md-link">
          Pipeline Spec
          </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div class="column-2">
    <div class="card-square mdl-card mdl-shadow--2dp">
      <div class="mdl-card__title mdl-card--expand">
        <h4 class="mdl-card__title-text">Pachyderm Config Spec &nbsp;&nbsp;&nbsp;<i class="fa fa-file-text-o"></i></h4>
      </div>
      <div class="mdl-card__supporting-text">
        Learn how you can modify your cluster by setting up
        the Pachyderm configuration file.
      </div>
      <div class="mdl-card__actions mdl-card--border">
        <ul>
          <li><a href="config-spec" class="md-typeset md-link">
          Pachyderm Config Spec
          </a>
          </li>
        </ul>
       </div>
     </div>
  </div>
</div>

<div class="row">
  <div class="column-2">
    <div class="card-square mdl-card mdl-shadow--2dp">
      <div class="mdl-card__title mdl-card--expand">
        <h4 class="mdl-card__title-text">Pachyderm Helm Chart Values Spec  &nbsp;&nbsp;&nbsp;<i class="fa fa-terminal"></i></h4>
      </div>
      <div class="mdl-card__supporting-text">
        Read about the available fields in the values.yaml file used to deploy with Helm.
      </div>
      <div class="mdl-card__actions mdl-card--border">
        <ul>
           <li><a href="helm-values/" class="md-typeset md-link">
             Pachyderm Helm Chart Values Spec
           </a>
           </li>
         </ul>
      </div>
    </div>
  </div>
<div class="column-2">
    <div class="card-square mdl-card mdl-shadow--2dp">
      <div class="mdl-card__title mdl-card--expand">
        <h4 class="mdl-card__title-text">Pachyderm Language Clients &nbsp;&nbsp;&nbsp;<i class="fa fa-terminal"></i></h4>
      </div>
      <div class="mdl-card__supporting-text">
        Set up a language client of your choice
        to interact with the Pachyderm API.
      </div>
      <div class="mdl-card__actions mdl-card--border">
        <ul>
           <li><a href="clients/" class="md-typeset md-link">
             Pachyderm Language Clients
           </a>
           </li>
         </ul>
      </div>
    </div>
  </div>
</div>

<div class="row">
  <div class="column-2">
    <div class="card-square mdl-card mdl-shadow--2dp">
      <div class="mdl-card__title mdl-card--expand">
        <h4 class="mdl-card__title-text">S3 Gateway API Reference &nbsp;&nbsp;&nbsp;<i class="fa fa-file-text-o"></i></h4>
      </div>
      <div class="mdl-card__supporting-text">
        Learn how you can set up the S3 gateway and
        perform basic operations with S3 buckets.
      </div>
      <div class="mdl-card__actions mdl-card--border">
        <ul>
          <li><a href="s3gateway-api/" class="md-typeset md-link">
            S3 Gateway API References
          </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
    <div class="column-2">
    <div class="card-square mdl-card mdl-shadow--2dp">
      <div class="mdl-card__title mdl-card--expand">
        <h4 class="mdl-card__title-text">Pachctl Reference &nbsp;&nbsp;&nbsp;<i class="fa fa-file-text-o"></i></h4>
      </div>
      <div class="mdl-card__supporting-text">
         Read the <code>pachctl</code>
        reference to learn how to perform operations
        with repositories, pipelines, and other
        Pachyderm objects and primitives.
      </div>
      <div class="mdl-card__actions mdl-card--border">
        <ul>
           <li><a href="pachctl/pachctl/" class="md-typeset md-link">
           Pachyderm Reference
           </a>
           </li>
        </ul>
      </div>
    </div>
  </div>
</div>
<div class="row">
  <div class="column-2">
     <div class="card-square mdl-card mdl-shadow--2dp">
       <div class="mdl-card__title mdl-card--expand">
         <h4 class="mdl-card__title-text">Examples &nbsp;&nbsp;&nbsp;<i class="fa fa-flask"></i></h4>
       </div>
       <div class="mdl-card__supporting-text">
         Try out our example pipelines.
       </div>
       <div class="mdl-card__actions mdl-card--border">
         <ul>
            <li><a href="../examples/examples/" class="md-typeset md-link">
            Examples
            </a>
            </li>
         </ul>
       </div>
     </div>
   </div>
</div>
